--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -321,14 +321,41 @@ body {
   }
 }
 .accordion-v2__panel {
+	font-weight: 600;
   strong {
     color: black !important;
   }
 }
 
 @media (max-width: 920px) {
-	.hide-on-mobile-image:nth-of-type(1n+2){
-		 display: none; 
-		}
-	
+  .hide-on-mobile-image:nth-of-type(1n + 2) {
+    display: none;
+  }
+}
+
+.line {
+  overflow: hidden;
+}
+
+.line:before {
+  background-color: #000;
+  content: "";
+  display: inline-block;
+  height: 1px;
+  position: relative;
+  vertical-align: middle;
+  width: 2%;
+}
+
+.white-text {
+	font-size: 24px;
+	line-height: 32px;
+	font-weight: 600;
+
+  strong {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 32px;
+    color: #f9fafb;
+  }
 }
