--- a/src/assets/scss/custom-style/_buttons.scss
+++ b/src/assets/scss/custom-style/_buttons.scss
@@ -36,7 +36,7 @@
   background: var(--color-primary-dark);
   color: var(--color-white);
   border: 1px solid var(--color-primary-dark);
-  box-shadow: 0px 6px 14px 2px alpha(var(--color-secondary-dark), 0.2);
+  box-shadow: var(--shadow-sm);
 
   &:hover {
     background: var(--color-primary-dark);
